force-app/main/default/objects/BudgetCategoryValue/BudgetCategoryValue.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>