force-app/main/default/objects/BudgetCategoryValue/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Budget category line items Account numbers</description>
    <inlineHelpText>Budget Line Items Account Number</inlineHelpText>
    <label>Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>