force-app/main/default/objects/BudgetCategoryValue/fields/Actual_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Actual_Disbursed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Disbursed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>