force-app/main/default/objects/BudgetCategoryValue/fields/Budget_Category_Text_Name__c.field-meta.xml
<CustomField>
    <fullName>Budget_Category_Text_Name__c</fullName>
    <description>Used in Flows (Launch Budget Table for Application Component

) to help filter out duplicate budget catergory values for creation of new values from templates</description>
    <formula>BudgetCategory.Name</formula>
    <label>Budget Category Text Name</label>
    <type>Text</type>
</CustomField>