force-app/main/default/objects/BudgetCategoryValue/fields/Budget_Detail_Name__c.field-meta.xml
<CustomField>
    <fullName>Budget_Detail_Name__c</fullName>
    <inlineHelpText>Name of this budget line item.  If no details on this category create a detail with the same name as the category.  Max 65 characters.</inlineHelpText>
    <label>Budget Detail Name</label>
    <length>65</length>
    <type>Text</type>
</CustomField>