force-app/main/default/objects/BudgetCategoryValue/fields/BudgetId__c.field-meta.xml
<CustomField>
    <fullName>BudgetId__c</fullName>
    <formula>CASESAFEID(BudgetCategory.BudgetId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BudgetId</label>
    <type>Text</type>
</CustomField>