force-app/main/default/objects/BudgetCategoryValue/fields/Detail_Name__c.field-meta.xml
<CustomField>
    <fullName>Detail_Name__c</fullName>
    <inlineHelpText>Max 65 characters</inlineHelpText>
    <label>Detail Name</label>
    <length>65</length>
    <type>Text</type>
</CustomField>