force-app/main/default/objects/BudgetCategoryValue/fields/Disbursed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disbursed_Amount__c</fullName>
    <formula>Actual_Disbursed__c +  Pending_Disbursement__c + Total_Prior_Disbursed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the combined total of funds already disbursed, currently pending disbursement, and any prior disbursed amounts.</inlineHelpText>
    <label>Disbursed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>