force-app/main/default/objects/BudgetCategoryValue/fields/Discription__c.field-meta.xml
<CustomField>
    <fullName>Discription__c</fullName>
    <inlineHelpText>Discription of cost category detail</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>