force-app/main/default/objects/BudgetCategoryValue/fields/Grantee_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Grantee_Contribution__c</fullName>
    <description>Field used to capture Subrecipient contributions. Will be used in rollup fields on the catergory and budget records</description>
    <inlineHelpText>What amount the Subrecipent has stated they will match/participate for this line item</inlineHelpText>
    <label>Grantee Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>