force-app/main/default/objects/BudgetCategoryValue/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <formula>BudgetCategory.ItemNumber__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Number</label>
    <type>Text</type>
</CustomField>