force-app/main/default/objects/BudgetCategoryValue/fields/Item_Sub__c.field-meta.xml
<CustomField>
    <fullName>Item_Sub__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Sub</label>
    <referenceTo>Item_Sub__c</referenceTo>
    <relationshipLabel>Budget Category Details</relationshipLabel>
    <relationshipName>Budget_Category_Details</relationshipName>
    <type>Lookup</type>
</CustomField>