force-app/main/default/objects/BudgetCategoryValue/fields/Item_Sub_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Sub_Description__c</fullName>
    <label>Item Sub Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>