force-app/main/default/objects/BudgetCategoryValue/fields/Lookup_Key__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Key__c</fullName>
    <formula>Contract_Number__c &amp; Item_Number__c &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lookup Key</label>
    <type>Text</type>
</CustomField>