force-app/main/default/objects/BudgetCategoryValue/fields/Match_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Match_Contribution__c</fullName>
    <inlineHelpText>Defines what match the grantee is obligated to provide for this line item.</inlineHelpText>
    <label>Match Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>