force-app/main/default/objects/BudgetCategoryValue/fields/Net_Change__c.field-meta.xml
<CustomField>
    <fullName>Net_Change__c</fullName>
    <formula>Total_Amount__c  - Prior_Budget_Category_Value__r.Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>