force-app/main/default/objects/BudgetCategoryValue/fields/Pending_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Pending_Disbursement__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This value is the amount from this cost category that is in a Financial Activity that has been submitted and in the review process</inlineHelpText>
    <label>Pending Draw Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>