force-app/main/default/objects/BudgetCategoryValue/fields/Planned_Cdbg_Amount__c.field-meta.xml
<CustomField>
    <fullName>Planned_Cdbg_Amount__c</fullName>
    <label>Planned Cdbg Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>