force-app/main/default/objects/BudgetCategoryValue/fields/Prior_Available__c.field-meta.xml
<CustomField>
    <fullName>Prior_Available__c</fullName>
    <formula>Prior_Budget_Category_Value__r.Available_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prior Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>