force-app/main/default/objects/BudgetCategoryValue/fields/Prior_Budget_Category_Value__c.field-meta.xml
<CustomField>
    <fullName>Prior_Budget_Category_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prior Budget Category Value</label>
    <referenceTo>BudgetCategoryValue</referenceTo>
    <relationshipLabel>Budget Category Values</relationshipLabel>
    <relationshipName>Revised_Budget_Category_Values</relationshipName>
    <type>Lookup</type>
</CustomField>