force-app/main/default/objects/BudgetCategoryValue/fields/Prior_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Prior_Disbursed__c</fullName>
    <formula>Prior_Budget_Category_Value__r.Actual_Disbursed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prior Disbursed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>