force-app/main/default/objects/BudgetCategoryValue/fields/Prior_Pending_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Prior_Pending_Disbursed__c</fullName>
    <formula>Prior_Budget_Category_Value__r.Pending_Disbursement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prior Pending Disbursed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>