force-app/main/default/objects/BudgetCategoryValue/fields/Prior_Planned_Amount__c.field-meta.xml
<CustomField>
    <fullName>Prior_Planned_Amount__c</fullName>
    <formula>Prior_Budget_Category_Value__r.Amount</formula>
    <label>Prior Planned Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>