force-app/main/default/objects/BudgetCategoryValue/fields/Prior_Total__c.field-meta.xml
<CustomField>
    <fullName>Prior_Total__c</fullName>
    <formula>Prior_Budget_Category_Value__r.Amount +  Prior_Budget_Category_Value__r.Other_Funding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prior Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>