force-app/main/default/objects/BudgetCategoryValue/fields/Reallocated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reallocated_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Amount reallocated FROM a Cost Category Detail. 
This is a sum of related cost category details that have a negative reallocated sum.</inlineHelpText>
    <label>Reallocated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>