force-app/main/default/objects/BudgetCategoryValue/fields/Reallocation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reallocation_Amount__c</fullName>
    <formula>Reallocated_Amount__c * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a sum of related cost category details that have a negative reallocated sum, here to sum back into available amount</inlineHelpText>
    <label>Reallocation Amount (Debit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>