force-app/main/default/objects/BudgetCategoryValue/fields/ReallocationAmount__c.field-meta.xml
<CustomField>
    <fullName>ReallocationAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This is a sum of related cost category details that have a positive reallocated sum, here to sum back into available amount</inlineHelpText>
    <label>Reallocation Amount (Credit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>