force-app/main/default/objects/BudgetCategoryValue/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <formula>TEXT(BudgetCategory.SequenceNumber) &amp;&quot;.&quot;&amp; TEXT(Sequence__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort Order</label>
    <type>Text</type>
</CustomField>