force-app/main/default/objects/BudgetCategoryValue/fields/Total_Amount_Expended__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Expended__c</fullName>
    <formula>Prior_Budget_Category_Value__r.Prior_Budget_Category_Value__r.Amount -  Actual_Disbursed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Expended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>