force-app/main/default/objects/BudgetCategoryValue/fields/Total_Prior_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Total_Prior_Disbursed__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The total amount that has been disbursed from prior Budget Category Values</inlineHelpText>
    <label>Total Prior Disbursed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>